--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 %\usetheme{Copenhagen}
 %\usetheme{Madrid}
 %\usecolortheme{beaver}
-\usepackage{amsmath,amssymb,amsfonts,booktabs,empheq,lmodern,mathtools,nccmath,physics,pgfplots}
+\usepackage{amsmath,amssymb,amsfonts,booktabs,empheq,lmodern,mathtools,nccmath,pgfplots}
 \usepackage{hyperref}
 %\hypersetup{colorlinks=true,linkcolor={blue}}
 \usepackage{siunitx}
