--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath,amssymb,amsfonts,booktabs,empheq,lmodern,mathtools,nccmath,physics,pgfplots}
 \usepackage{hyperref}
 %\hypersetup{colorlinks=true,linkcolor={blue}}
+\usepackage{siunitx}
 \sisetup{load-configurations = abbreviations}
 \pgfplotsset{width=10cm,compat=1.9}
 \usepgfplotslibrary{external}
